# qvogenclient

./: .gitignore  CMakeLists.txt  README.en.md  README.html  README.md  xmake.lua
src/: .gitignore  CMakeLists.txt
src/FramelessHelper/: CMakeLists.txt
src/FramelessHelper/src/core/: CMakeLists.txt
src/ImportFormats/: CMakeLists.txt
src/ImportFormats/QMidi/: CMakeLists.txt
src/ImportFormats/QMidi/src/: QMidiDef.h
src/ImportFormats/QUtauStd/: CMakeLists.txt  QControlPoint.h  QCorrectGenon.h  QGenonSettings.h  QLinkNote.cpp  QLinkNote.h  QUtauStd.h  SectionSettings.cpp  SectionSettings.h  SectionVersion.h  SequenceTextFile.h
src/ImportFormats/QUtauStd/win32/: res.rc
src/ImportFormats/wave/: CMakeLists.txt  README.md
src/ImportFormats/wave/src/: CMakeLists.txt
src/ImportFormats/wave/src/qttest/: CMakeLists.txt  main.cpp
src/ImportFormats/wave/src/wave/: CMakeLists.txt  error.h  file.cc  file.h  header.cc  header.h  header_list.cc  header_list.h
src/ImportFormats/wave/src/wave/header/: data_header.cc  data_header.h  fmt_header.cc  fmt_header.h  riff_header.cc  riff_header.h  wave_header.cc  wave_header.h
src/MacWindowButtons/: CMakeLists.txt  MacMainWindow.cpp  MacMainWindow.h  MainWindow.cpp  MainWindow.h
src/QUtauStd/: CMakeLists.txt  QControlPoint.h  QLinkNote.h  QUtauStd.h  SectionVersion.cpp  SequenceTextFile.cpp
src/QVogenClient/: CMakeLists.txt  main.cpp
src/QVogenClient/Framework/: Macros.h
src/QVogenClient/Framework/Custom/: CApplication.h  CCheckBox.h  CGraphicsScene.h  CGraphicsView.cpp  CGraphicsView.h  CMenu.cpp  CMenu.h  CScrollArea.h  CScrollBar.h  CTreeWidget.h
src/QVogenClient/Framework/Custom/ABI/: CMenuImpl.cpp
src/QVogenClient/Framework/Helpers/: MathHelper.cpp  MathHelper.h  SystemHelper.h  ViewHelper.cpp  ViewHelper.h
src/QVogenClient/Framework/Metatypes/User/: QSvgUri.cpp  QSvgUri.h
src/QVogenClient/Framework/Visual/: CCoupleTabFrame.cpp  CCoupleTabFrame.h  QScrollableTabWidget.cpp
src/QVogenClient/Framework/Visual/QScrollableTabWidgetImpl/: QScrollableTabBar.cpp  QScrollableTabBar.h  QScrollableTabBar_p.cpp
src/QVogenClient/Meta/: Namespace.cpp  Namespace.h
src/QVogenClient/Resources/: res.qrc
src/QVogenClient/Resources/fl/: vogen.fla  vogen_mac.fla
src/QVogenClient/Resources/logo/mac/: QVogenClient.icns  script.sh
src/QVogenClient/Resources/logo/win/: res.rc
src/QVogenClient/Resources/themes/: dark-v3.qss
src/QVogenClient/Resources/translations/: qtbase_zh_CN.ts  qvogenclient_zh_CN.ts
src/QVogenClient/Staging/: MainWindow.cpp  MainWindow.h
src/QVogenClient/Staging/Application/: QsApplication.h  QsApplication_p.cpp
src/QVogenClient/Staging/Application/Logs/: CRecordData.cpp  CRecordData.h  CRecordHolder.cpp  CRecordHolder.h
src/QVogenClient/Staging/Application/Managers/: DataManager.cpp  DataManager.h  DataManager_p.cpp  DataManager_p.h  ExtensionManager.cpp  ExtensionManager.h  ExtensionManager_p.cpp  ExtensionManager_p.h  WindowManager.cpp  WindowManager.h
src/QVogenClient/Staging/Application/Types/: Actions.h  Events.cpp  Events.h  Graphics.h
src/QVogenClient/Staging/Backend/Project/: QVogenFile.cpp  QVogenFile.h  QVogenVoiceFile.cpp  QVogenVoiceFile.h  QVogenVoiceInfo.cpp  QVogenVoiceInfo.h
src/QVogenClient/Staging/Backend/Utils/: TempDirGuard.cpp  TempDirGuard.h
src/QVogenClient/Staging/Frontend/Basic/: BaseDialog.cpp  BaseDialog.h  BaseDialog_p.cpp  BaseDialog_p.h
src/QVogenClient/Staging/Frontend/Utils/: FileParser.cpp  FileParser.h
src/QVogenClient/Staging/Main/: CentralNavBar.cpp  CentralNavBar.h  CentralNavBar_p.cpp  CentralPanel.cpp  CentralPanel_p.cpp  CentralPanel_p.h  CentralTab.cpp  CentralTabWidget.cpp  CentralTabWidget_p.cpp  CentralTabWidget_p.h  CentralToolBar.cpp  CentralToolBar.h  CentralToolBar_p.cpp
src/QVogenClient/Staging/Main/Managers/: ActionManager.cpp  ActionManager.h  ActionManager_p.cpp  EventManager.cpp  EventManager.h  TabManager.cpp  TabManager.h  TabManager_p.cpp  TabManager_p.h
src/QVogenClient/Staging/Main/Panels/: ControlPanel.h  UtterPanel.cpp  UtterPanel.h  UtterPanel_p.cpp
src/QVogenClient/Staging/Main/Tabs/: VogenTab.cpp  VogenTab.h  VogenTab_p.cpp
src/QVogenClient/Staging/Main/Tabs/VogenTabImpl/: TPianoPanel.cpp  (+6 more)
src/QVogenClient/Staging/Synth/: SynthClient.cpp  SynthClient.h
src/QVogenClient/Staging/Test/: TestWindow.cpp
src/QVogenClient/Staging/Window/: CentralPanel.h  CentralTabContent.cpp  CentralTabContent.h  CentralTabWidget.h  CentralTabWidget_p.cpp  CentralToolBar_p.h
src/QVogenClient/Staging/Window/Bars/: CentralNavBar_p.h  CentralToolBar.h  CentralToolBar_p.h
src/QVogenClient/Staging/Window/Dialogs/: SelectsDialogV2.cpp  SelectsDialogV2.h  VoiceManagerDialog.cpp  VoiceManagerDialog.h  VoiceManagerDialog_p.cpp  VoiceManagerDialog_p.h
src/QVogenClient/Staging/Window/Managers/: ActionManager.cpp  EventManager.cpp  EventManager.h  TabManager.cpp  TabManager.h  TabManager_p.cpp  TabManager_p.h
src/QVogenClient/Staging/Window/Modules/: CentralToolBar.cpp  CentralToolBar.h  CentralToolBar_p.cpp  CentralToolBar_p.h  QCommandPalette.cpp  QCommandPalette.h  QCommandPalette_p.cpp  QCommandPalette_p.h
src/QVogenClient/Staging/Window/Panels/: ControlPanel.cpp  ControlPanel_p.cpp  ControlPanel_p.h  UtterPanel_p.h
src/QVogenClient/Staging/Window/Tabs/: CentralPanel.h  CentralPanel_p.cpp  CentralTab.cpp  CentralTab.h  CentralTabContent.cpp  CentralTabContent.h  CentralTabContent_p.cpp  CentralTabContent_p.h  CentralTab_p.cpp  CentralTab_p.h  DocumentTab.cpp  DocumentTab.h  FolderTab.cpp  FolderTab.h  VogenTab.cpp  VogenTab_p.h
src/QuaZip/: CMakeLists.txt
src/QuaZip/zlib-1.2.12/: CMakeLists.txt
src/RenderHost/: .gitignore  CMakeLists.txt  Global.h  RHProtocol.cpp  RHProtocol.h  RHUtils.cpp  RHUtils.h  RenderHost.cpp  RenderHost.h  main.cpp
src/RenderHost/Res/win32/: res.rc
src/RenderHost/Test/: main.cpp
src/RenderHost/Utils/: QJsonFormatter.cpp
src/RenderHost/World/src/world/: cheaptrick.h  codec.h  stonemask.h
src/Scripts/: Basic.cmake  Copy.cmake  FindQt.cmake  Log.cmake
src/Scripts/Deploy/: WinDeploy.cmake
(+220 files in other folders)
