cmake_minimum_required(VERSION 3.5)

project(MacWindowButtons VERSION 0.1 LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets REQUIRED)
find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets REQUIRED)

set(MAC_WINDOW_BUTTONS_LIB_NAME MacWindowButtonsLib)

set(PROJECT_SOURCES
        MacMainWindow.cpp
        MacMainWindow.h
        MacWindowCtl.h
        MacWindowCtl.mm
)

add_library(${MAC_WINDOW_BUTTONS_LIB_NAME}
    ${PROJECT_SOURCES}
)

target_link_libraries(${MAC_WINDOW_BUTTONS_LIB_NAME} PRIVATE
    "-framework Cocoa"
)

target_link_libraries(${MAC_WINDOW_BUTTONS_LIB_NAME} PRIVATE
    Qt${QT_VERSION_MAJOR}::Widgets
)

target_include_directories(${MAC_WINDOW_BUTTONS_LIB_NAME} PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)

set_target_properties(${MAC_WINDOW_BUTTONS_LIB_NAME} PROPERTIES
    MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
)
